--- a/Buoi01/css/style.css
+++ b/Buoi01/css/style.css
@@ -1,36 +1,9 @@
-.H1_begin {
-    background-color: green;
-    text-align: center;
-    width: 40%;
-    padding: 1px 1px;
-    margin: 20px auto;
+body {
+    margin: 0 auto;
+}
+h1 {
     color: white;
-
-
-}
-
-.p_begin {
-    color: blue;
-    font-size: 30px;
-
-}
-
-.p_begin2 {
-    color: blue;
-    font-size: 30px;
-
-}
-
-.p_begin3 {
-    background-color: blanchedalmond;
-    width: 100%;
-  width: 85%;
-    color: blue;
-    font-weight: bold;
-    font-size: 30px;
-
-}
-
-.test {
-    dw
+    background-color: aquamarine;
+    text-align: center;
+    display: inline;
 }
