--- a/Buoi01/css/style.css
+++ b/Buoi01/css/style.css
@@ -6,4 +6,9 @@ h1 {
     background-color: aquamarine;
     text-align: center;
     display: inline;
+    stroke: none;
+    margin-block-start: 0fr;
+    max-resolution: red;
+    
 }
+
